maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:15: error: not found: value random3
					d = random3()
                                            ^